--- a/10단계.md
+++ b/10단계.md
@@ -32,12 +32,50 @@ print(answer)
 ##### 단계 3 - 별 찍기 - 10 (2447)
 
 ```python
+def starSquare(star):
+    matrix = []
+    for i in range(len(star)*3):
+        if i//len(star) == 1:
+            # print(star[i%len(star)] + " " * len(star) + star[i%len(star)])
+            matrix.append(star[i%len(star)] + " " * len(star) + star[i%len(star)])
+        else:
+            # print(star[i%len(star)]*3)
+            matrix.append(star[i%len(star)]*3)
+    return (list(matrix))
 
+star_list = ["***", "* *", "***"]
+N = int(input())
+loop = 0
+while N != 3:
+    N = int(N/3)
+    loop += 1
+
+for _ in range(loop):
+    star_list = starSquare(star_list)
+
+for i in star_list:
+    print(i)
 ```
 
 ##### 단계 4 - 하노이 탑 이동 순서 (11729)
 
 ```python
+def hanoi(n, start, second, end, seq_list):
+
+    if n == 1:
+        seq_list.append([start, end])
+    else:
+        hanoi(n-1, start, end, second, seq_list)
+        seq_list.append([start, end])
+        hanoi(n-1, second, start, end, seq_list)
+
+N = int(input())
+seq_list = []
+hanoi(N, 1, 2, 3, seq_list)
+print(len(seq_list))
+
+for seq in seq_list:
+    print(f'{seq[0]} {seq[1]}')
 
 ```
 
