--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -74,3 +74,76 @@ def solution(n):
 print(solution(n))
 ```
 
+
+
+##### 단계 4 - 파도반 수열 (9461)
+
+```python
+t = int(input())
+
+for _ in range(t):
+    n = int(input())
+    if n <= 2:
+        print(1)
+        continue
+    else:
+        stack = [0]*n
+        stack[0] = 1
+        stack[1] = 1
+        stack[2] = 1
+        
+    for i in range(3, n):
+        stack[i] = stack[i-2] + stack[i-3]
+
+    print(stack[n-1])
+```
+
+
+
+##### 단계 5 - RGB거리 (1149)
+
+```python
+n = int(input())
+home = []
+for _ in range(n):
+    home.append(list(map(int, input().split())))
+sum_list = home[0]
+MAX = 1000*n
+for i in range(1, n):
+    for j in range(3):
+        tmp = []
+        tmp2 = []
+        for k in range(3):
+            if j == k:
+                tmp.append(MAX)
+            if j != k:
+                tmp.append(sum_list[k] + home[i][j])
+        sum_list.append(min(tmp))
+    sum_list = sum_list[3:]
+    # print(sum_list)
+
+print(min(sum_list))
+```
+
+
+
+##### 단계 6 - 정수 삼각형 (1932)
+
+```python
+n = int(input())
+triangle = []
+for _ in range(n):
+    triangle.append(list(map(int, input().split())))
+
+for i in range(1, n):
+    for j in range(len(triangle[i])):
+        if j == 0:
+            triangle[i][j] += triangle[i-1][0]
+        elif j == len(triangle[i])-1:
+            triangle[i][j] += triangle[i-1][-1]
+        else:
+            triangle[i][j] += max(triangle[i-1][j], triangle[i-1][j-1])
+
+print(max(triangle[-1]))
+```
+
