--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -147,3 +147,27 @@ for i in range(1, n):
 print(max(triangle[-1]))
 ```
 
+
+
+##### 단계 7 - 계단 오르기 (2579)
+
+```python
+n = int(input())
+steps = []
+dp = [0]*(301)
+for _ in range(n):
+    steps.append(int(input()))
+
+if n > 2:
+    dp[0] = steps[0]
+    dp[1] = steps[0] + steps[1]
+    dp[2] = max(steps[0] + steps[2], steps[1] + steps[2])
+
+    for i in range(3, n):
+        dp[i] = max(steps[i] + dp[i-3] + steps[i-1], steps[i] + dp[i-2])
+
+    print(dp[n-1])
+else:
+    print(sum(steps))
+```
+
