동적계획법단계8

--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -171,3 +171,39 @@ else:
     print(sum(steps))
 ```
 
+
+
+##### 단계 8 - 1로 만들기 (1463)
+
+```python
+from queue import deque
+
+n = int(input())
+queue = deque()
+dp = [0]*(n+1)
+queue.append([n, 0])
+
+while queue:
+    num, idx = queue.popleft()
+
+    if num == 1:
+        print(idx)
+        break
+
+    if num%3 == 0 and dp[num//3] == 0:
+        queue.append([num//3, idx+1])
+        dp[num//3] = 1
+    if num%2 == 0 and dp[num//2] == 0:
+        queue.append([num//2, idx+1])
+        dp[num//2] = 1
+    if num > 1 and dp[num-1] == 0:
+        queue.append([num-1, idx+1])
+        dp[num-1] = 1
+
+```
+
+이번에 사용한 방법은 bfs와 비슷하게 queue와 dp를 섞은 방법이다.
+
+queue로 각각의 연산 값을 저장해 주면서 dp에 해당 값을 보존해준다.
+
+다음 queue를 돌 때 이미 연산된 값이 있다면 버리도록 하기 위해서이다.
