동적계획법단계9

--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -207,3 +207,60 @@ while queue:
 queue로 각각의 연산 값을 저장해 주면서 dp에 해당 값을 보존해준다.
 
 다음 queue를 돌 때 이미 연산된 값이 있다면 버리도록 하기 위해서이다.
+
+
+
+##### 단계 9 - 쉬운 계단 수 (10844)
+
+```python
+# 시간 초과
+n = int(input())
+answer = 0
+for i in range(1, 10**n):
+    num = str(i)
+    for t in range(1, len(num)):
+        if int(num[t])-1 != int(num[t-1]):
+            break
+    else:
+        answer += 1
+
+print(answer%1000000000)
+
+# 정답
+n = int(input())
+dp = [[0]*10 for _ in range(n+1)]
+
+for i in range(1, 10):
+    dp[1][i] = 1
+
+for i in range(2, n+1):
+    for j in range(10):
+        if j == 0:
+            dp[i][j] += dp[i-1][1]
+        elif j == 9:
+            dp[i][j] += dp[i-1][8]
+        else:
+            dp[i][j] += dp[i-1][j-1] + dp[i-1][j+1]
+
+print(sum(dp[n])%1000000000)
+
+```
+
+dp는 역시 저장할 값을 무엇으로 두는지가 관건인 것 같다.
+
+각 자리의 1~9에서 앞, 뒤에 하나 자신보다 작거나 큰 값을 저장해주면 되는데,
+
+예를 들어 한 자리일 때는 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 에서 모두 1이 된다.
+
+두 자리일 때부터 계산이 시작되는데
+
+0, 1, 2, 3, 4, 5, 6, 7, 8, 9
+
+0, 1, 2, 3, 4, 5, 6, 7, 8, 9 에서
+
+0일 때는 01이 될 수 없기 때문에 10으로 오직 하나만 성립한다.
+
+1일 때는 10, 12 두 가지가 성립되기 때문에 n=1이며 0일 때와 2일 때의 값을 저장한다.
+
+이런식으로 9까지 저장한 값을 dp로 만들어나간다.
+
