동적계획법단계10

--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -264,3 +264,26 @@ dp는 역시 저장할 값을 무엇으로 두는지가 관건인 것 같다.
 
 이런식으로 9까지 저장한 값을 dp로 만들어나간다.
 
+
+
+##### 단계 10 - 포도주 시식 (2156)
+
+```python
+n = int(input())
+juice = [0]*10001
+dp = [0]*10001
+
+for i in range(n):
+    juice[i] = int(input())
+
+dp[0] = juice[0]
+dp[1] = juice[0] + juice[1]
+dp[2] = max(dp[1], juice[0] + juice[2], juice[1] + juice[2])
+
+for i in range(3, n):
+    dp[i] = max(dp[i-1], dp[i-2] + juice[i], dp[i-3] + juice[i-1] + juice[i])
+
+print(dp[n-1])
+
+```
+
