동적계획법11단계

--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -287,3 +287,20 @@ print(dp[n-1])
 
 ```
 
+
+
+##### 단계 11 - 가장 긴 증가하는 부분 수열 (11053)
+
+```python
+n = int(input())
+seq = list(map(int, input().split()))
+dp = [1]*(n)
+
+for i in range(n):
+    for j in range(i):
+        if seq[i] > seq[j]:
+            dp[i] = max(dp[i], dp[j] + 1)
+
+print(max(dp))
+```
+
