--- a/14단계-동적계획법.md
+++ b/14단계-동적계획법.md
@@ -304,3 +304,43 @@ for i in range(n):
 print(max(dp))
 ```
 
+
+
+##### 단계 12 - 가장 긴 바이토닉 부분 수열 (11054)
+
+```python
+
+```
+
+
+
+##### 단계 13 - 전깃줄 (2565)
+
+```python
+
+```
+
+
+
+##### 단계 14 - LCS (9251)
+
+```python
+
+```
+
+
+
+##### 단계 15 - 연속합 (1912)
+
+```python
+
+```
+
+
+
+##### 단계 16 - 평범한 배낭 (12865)
+
+```python
+
+```
+
